--- a/app/src/public/css/stylesheet.css
+++ b/app/src/public/css/stylesheet.css
@@ -15,3 +15,16 @@
     width: 60px;
     left: 50%;
 }
+
+table {
+    display: inline-block;
+}
+
+.reginput {
+    width: 240px;
+    display: inline-block;
+}
+
+.reglabel {
+    display: inline-block;
+}
