--- a/app/src/public/css/stylesheet.css
+++ b/app/src/public/css/stylesheet.css
@@ -1,19 +1,15 @@
 #recordaudio {
-    height: 250px;
     width: 750px;
-    position: relative;
-    margin-top: 300px;
+    display: inline-block;
+    margin: 50px 0 50px 0;
     left: 35%;
 }
 
-#filenameid {
-    width: 70%;
+input {
+    padding: 5px;
 }
-
-#postbutton {
-    height: 20px;
-    width: 60px;
-    left: 50%;
+button {
+    padding: 5px;
 }
 
 table {
