--- a/app/src/public/css/stylesheet.css
+++ b/app/src/public/css/stylesheet.css
@@ -1,31 +1,33 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 * {
     font-family: 'Roboto', sans-serif;
 	box-sizing: border-box;
 }
+
 body{
-	margin-top:10em;
+	align-items: center;
+	justify-items: center;
+	vertical-align: middle;
+	margin-top: auto;
+	margin-bottom: auto;
 	margin-left:auto;
 	margin-right:auto;
 	width:30em;
-	background-color: rgb(31, 26, 37);
-	
-	color: rgb(238, 180, 23);
+	background-color: #36393f;
+	color: #FFF;
 }
 
-#recordaudio {
-    width: 750px;
-    display: inline-block;
-    margin: 50px 0 50px 0;
-    left: 35%;
+.title {
+	margin-top: 20vh; 
+	color: #FFF;
 }
-
-
 
 .inp {
 	position: relative;
-	margin: auto;
+	/*margin: auto;*/
 	width: 100%;
-	max-width: 200px;
+	/*max-width: 200px;*/
 	border-radius: 3px;
 	overflow: hidden;
 }
@@ -35,7 +37,7 @@ body{
 	top: 20px;
 	left: 12px;
 	font-size: 16px;
-	color: rgba(0, 0, 0, .5);
+	color: rgba(255, 255, 255, 0.75);
 	font-weight: 500;
 	transform-origin: 0 0;
 	transform: translate3d(0, 0, 0);
@@ -65,9 +67,9 @@ body{
 	height: 56px;
 	font-size: 16px;
 	font-weight: 400;
-	background: rgba(0, 0, 0, .02);
+	background: rgb(58 61 67);
 	box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .3);
-	color: #000;
+	color: #FFF;
 	transition: all 0.15s ease;
 }
 
@@ -84,11 +86,11 @@ body{
 .inp input:focus {
 	background: rgba(0, 0, 0, .05);
 	outline: none;
-	box-shadow: inset 0 -2px 0 #07f;
+	box-shadow: inset 0 -2px 0 #FFF;
 }
 
 .inp input:focus + .label {
-	color: #07f;
+	color: rgba(255, 255, 255, 0.75);
 	transform: translate3d(0, -12px, 0) scale(0.75);
 }
 
@@ -97,9 +99,19 @@ body{
 	transition: all 0.1s ease;
 }
 
-.parentgrid {
+.parentgrid1 {
+	display: grid;
+	grid-template-columns: auto;
+}
+
+.parentgrid2 {
     display: grid;
-    grid-template-columns: auto auto;
+	grid-template-columns: 1fr 1fr;
+}
+
+.parentgrid2.middlepage {
+	align-items: center;
+	justify-items: center;
 }
 
 .column {
@@ -109,3 +121,80 @@ body{
 button {
     padding: 5px;
 }
+
+.mainpagebutton {
+	width: 120px;
+}
+
+#logindiv {
+	position: fixed;
+	right: 10px;
+	top: 10px;
+}
+
+.loginbuttons {
+	font-size: 15px;
+	margin-top: 10px;
+	padding: 0.35em 1.2em;
+	border: 0.1em solid #FFF;
+	border-radius: 0.12em;
+	box-sizing: border-box;
+	text-decoration: none;
+	font-weight: 300;
+	color: #FFF;
+	text-align: center;
+	transition: all 0.2s;
+	background: rgba(0,0,0,0);
+	cursor: pointer;
+}
+
+.loginbuttons:hover {
+	color: #000;
+	background: #FFF;
+}
+
+.loginbuttons#recordbutton {
+	padding: 4em 1.2em;
+	background: url(recordwhite.png);
+	background-size: 100px auto;
+	background-repeat-x: no-repeat;
+	background-repeat-y: no-repeat;
+	background-position-x: center;
+	background-position-y: center;
+}
+
+.loginbuttons#recordbutton:hover {
+	padding: 4em 1.2em;
+	background: url(recordgray.png);
+	background-color: #FFF;
+	background-size: 100px auto;
+	background-repeat-x: no-repeat;
+	background-repeat-y: no-repeat;
+	background-position-x: center;
+	background-position-y: center;
+}
+
+.loginbuttons.logout {
+	font-size: 13px;
+	padding: 0.35em 0.5em;
+}
+
+.column.reg {
+	margin: 5px;
+}
+
+.loginbuttons.reg {
+	width: 100%;
+}
+
+.reginput {
+	margin-bottom: 5px;
+}
+
+#signeddiv {
+	position: fixed;
+	top: 10px;
+	right: 10px;
+}
+
+
