--- a/app/src/public/css/stylesheet.css
+++ b/app/src/public/css/stylesheet.css
@@ -25,9 +25,7 @@ body{
 
 .inp {
 	position: relative;
-	/*margin: auto;*/
 	width: 100%;
-	/*max-width: 200px;*/
 	border-radius: 3px;
 	overflow: hidden;
 }
@@ -79,7 +77,7 @@ body{
 }
 
 .inp input:not(:placeholder-shown) + .label {
-	color: rgba(0, 0, 0, .5);
+	color: rgba(255, 255, 255, .5);
 	transform: translate3d(0, -12px, 0) scale(0.75);
 }
 
@@ -130,6 +128,12 @@ button {
 	position: fixed;
 	right: 10px;
 	top: 10px;
+}
+
+#signeddiv {
+	position: absolute;
+	top: 10px;
+	right: 10px;
 }
 
 .loginbuttons {
@@ -189,10 +193,27 @@ button {
 	margin-bottom: 5px;
 }
 
-#signeddiv {
-	position: fixed;
-	top: 10px;
-	right: 10px;
+.mediatitle {
+	display: inline-block;
+	margin: 1em 0px 0.25em 0px;
+	margin-block-start: 0;
+	margin-block-end: 0;
+	width: 50%;
 }
 
+.filesize {
+	display: inline-block;
+	margin: 1em 0px 0.25em 0px;
+	margin-block-start: 0;
+	margin-block-end: 0;
+	width: 50%;
+	text-align: right;
+}
 
+.audioplayer {
+	width: 100%;
+}
+
+.recordingcontainer {
+	margin-bottom: 15px;
+}
