--- a/app/src/public/css/stylesheet.css
+++ b/app/src/public/css/stylesheet.css
@@ -217,3 +217,17 @@ button {
 .recordingcontainer {
 	margin-bottom: 15px;
 }
+
+.progressbarcontainer {
+	margin-top:10px;
+    width: 100%;
+	background-color:rgb(58 61 67);
+	border: 0.1em solid #FFF;
+	border-radius: 0.12em;
+}
+
+.progressbar {
+	width:0%;
+    height: 24px;
+    background-color:rgb(35, 40, 45);
+}
