Fixed progress bar not showing up

--- a/app/src/public/css/stylesheet.css
+++ b/app/src/public/css/stylesheet.css
@@ -235,7 +235,8 @@ button {
    width: 100%;
    text-align: center;
    resize: none;
-  
+}
+
 .progressbarcontainer {
 	 margin-top:10px;
    width: 100%;
