refactored code, added api midding handling

--- a/app/src/public/css/stylesheet.css
+++ b/app/src/public/css/stylesheet.css
@@ -13,13 +13,13 @@ body{
 	margin-bottom: auto;
 	margin-left:auto;
 	margin-right:auto;
-	width:30em;
+	width:45vw;
 	background-color: #36393f;
 	color: #FFF;
 }
 
 .title {
-	margin-top: 20vh; 
+	margin-top: 25vh; 
 	color: #FFF;
 }
 
