--- a/app/src/public/css/stylesheet.css
+++ b/app/src/public/css/stylesheet.css
@@ -175,7 +175,7 @@ button {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #CCC;
+    background-color: rgba(0, 0, 0, 0.12);
     -webkit-transition: .4s;
     transition: .4s;
 }
