--- a/app/src/public/css/stylesheet.css
+++ b/app/src/public/css/stylesheet.css
@@ -27,14 +27,14 @@ h1 {
 	color: #FFF;
 }
 
-.inp {
+.inputlabel {
 	position: relative;
 	width: 100%;
 	border-radius: 3px;
 	overflow: hidden;
 }
 
-.inp .label {
+.inputlabel .label {
 	position: absolute;
 	top: 20px;
 	left: 12px;
@@ -47,7 +47,7 @@ h1 {
 	pointer-events: none;
 }
 
-.inp .focus-bg {
+.inputlabel .focus-bg {
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -59,7 +59,7 @@ h1 {
 	transform-origin: left;
 }
 
-.inp input {
+.inputlabel input {
 	-webkit-appearance: none;
 	appearance: none;
 	width: 100%;
@@ -75,28 +75,28 @@ h1 {
 	transition: all 0.15s ease;
 }
 
-.inp input:hover {
+.inputlabel input:hover {
 	background: rgba(0, 0, 0, .04);
 	box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .5);
 }
 
-.inp input:not(:placeholder-shown) + .label {
+.inputlabel input:not(:placeholder-shown) + .label {
 	color: rgba(255, 255, 255, .5);
 	transform: translate3d(0, -12px, 0) scale(0.75);
 }
 
-.inp input:focus {
+.inputlabel input:focus {
 	background: rgba(0, 0, 0, .05);
 	outline: none;
 	box-shadow: inset 0 -2px 0 #FFF;
 }
 
-.inp input:focus + .label {
+.inputlabel input:focus + .label {
 	color: rgba(255, 255, 255, 0.75);
 	transform: translate3d(0, -12px, 0) scale(0.75);
 }
 
-.inp input:focus + .label + .focus-bg {
+.inputlabel input:focus + .label + .focus-bg {
     transform: scaleX(1);
 	transition: all 0.1s ease;
 }
